# NBIO_Tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  docker-compose.yml  remove.sh  setup.sh  upgrade.sh
app/: Dockerfile  pyproject.toml
app/nbio/: auth.py  config.py  db.py  main.py  models.py  repo.py  sse.py  tz.py  version.py
app/nbio/migrations/: 001_formula_type.sql  002_app_settings.sql  003_vitd_event_type.sql  004_tummy_time_event_type.sql  005_growth_table.sql  006_feed_duration_sec.sql  __init__.py
app/nbio/routes/: devices.py  events.py  growth.py  pages.py  settings.py  stream.py  sw.py
app/nbio/static/: app.css  app.js  idb.js  manifest.webmanifest  settings.js  sw.js
app/nbio/templates/: base.html  index.html  print_report.html  recover.html  reports.html  settings.html
app/tests/: conftest.py
app/tests/api/: test_devices_api.py  test_events_api.py  test_export_api.py  test_feeds_last.py  test_growth_api.py  test_health.py  test_pages.py  test_print_report.py  test_recover.py  test_server_info_api.py  test_settings_api.py  test_static_mount.py  test_sw_versioning.py  test_tummy_api.py  test_version_endpoint.py  test_vitd_api.py
app/tests/integration/: test_concurrency.py  test_sse_live_loop.py  test_sse_replay.py  test_sse_stream.py
app/tests/shell/: test_readme_networking.py  test_setup_dryrun.py  test_setup_tailscale_transparency.py  test_shellcheck.py  test_upgrade_help.py  test_upgrade_resolve.py  test_upgrade_rollback.py  test_upgrade_shellcheck.py  test_upgrade_silent_fail.py  (+1 more)
(+45 files in other folders)
